# RTLola

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  check_ignored_tests_without_comment.sh  lola.bnf  lola.pest  rustfmt.toml
afl-fuzz-frontend/: Cargo.toml  fuzz.sh  fuzz_clean.sh  seed.sh
afl-fuzz-frontend/src/: main.rs
ast_node/: Cargo.toml
ast_node/src/: lib.rs
ast_node_derive/: Cargo.toml
ast_node_derive/src/: lib.rs
common/: Cargo.toml
common/src/: duration.rs  lib.rs  math.rs  schedule.rs
doc/: development.md  parameterization.md  release-checklist.md  rtlola-ids.md  streamlab-ids.md  syntax.md  types.md  typesystem.tex
doc/skeleton/: skeleton.drawio
evaluator/: Cargo.toml  README  readme.md
evaluator/benches/: endtoend.rs
evaluator/src/: closuregen.rs  evaluator.rs  lib.rs  tests.rs
evaluator/src/basics/: config.rs  csv_input.rs  io_handler.rs  mod.rs  pcap_input.rs
evaluator/src/coordination/: controller.rs  event_driven_manager.rs  mod.rs  monitor.rs  time_driven_manager.rs
evaluator/src/storage/: mod.rs  stores.rs  temp_store.rs  value.rs  window.rs  window_aggregations.rs
frontend/: Cargo.toml  README.md
frontend/src/: analysis.rs  ast.rs  export.rs  ir.rs  lib.rs  lola.pest  lowering.rs  parse.rs  print.rs  reporting.rs  stdlib.rs  tests.rs  ty.rs  type_checker.rs
frontend/src/analysis/: id_assignment.rs  lola_version.rs  missing_expression_check.rs  naming.rs  parenthesis_check.rs  typing.rs
frontend/src/analysis/graph_based_analysis/: dependency_graph.rs  evaluation_order.rs  future_dependency.rs  input_dependencies.rs  memory_analysis.rs  mod.rs  space_requirements.rs
frontend/src/app/: analyze.rs
frontend/src/ast/: conversion.rs  print.rs  verify.rs
frontend/src/ir/: lowering.rs  print.rs  schedule.rs
frontend/src/ty/: check.rs  type_lattice.rs  unifier.rs
frontend/src/type_checker/: types.rs  unification.rs
input-analyzer/: Cargo.toml
input-analyzer/src/: main.rs  output.rs
interpreter/: Cargo.toml  README.md  readme.md
interpreter/benches/: endtoend.rs
interpreter/src/: closuregen.rs  evaluator.rs  lib.rs  tests.rs
interpreter/src/basics/: csv_input.rs  io_handler.rs  mod.rs  pcap_input.rs
interpreter/src/coordination/: controller.rs  event_driven_manager.rs  monitor.rs  time_driven_manager.rs
interpreter/src/storage/: stores.rs  value.rs  window.rs  window_aggregations.rs
references/: .gitignore  documentation.tex  readme
rtlola/: Cargo.toml  README
rtlola/src/: closuregen.rs  evaluator.rs  lib.rs  util.rs
rtlola/src/basics/: config.rs  io_handler.rs  mod.rs  util.rs
rtlola/src/coordination/: controller.rs  event_driven_manager.rs  mod.rs  time_driven_manager.rs
rtlola/src/evaluator/: config.rs  evaluation.rs  event_driven_manager.rs  io_handler.rs  mod.rs  storage.rs  time_driven_manager.rs
rtlola/src/evaluator/evaluation/: temp_store.rs  value.rs
rtlola/src/storage/: mod.rs  storage.rs  stores.rs  temp_store.rs  value.rs  window.rs  window_aggregations.rs
src/: analysis.rs  ast.rs  intermediate_representation.rs  ir.rs  lib.rs  lola.pest  lowering.rs  parse.rs  print.rs  reporting.rs  stdlib.rs  ty.rs  util.rs
src/analysis/: common.rs  id_assignment.rs  lola_version.rs  mod.rs  naming.rs  reporting.rs  typing.rs
src/analysis/graph_based_analysis/: bandwith.rs  dependency_graph.rs  evaluation_order.rs  future_dependency.rs  memory_analysis.rs  mod.rs  space_requirements.rs
src/analysis/type_checker/: candidates.rs  checker.rs  mod.rs  type_error.rs
src/app/: analyze.rs
tests/: E2E-testing.md  add_two_int-holes-explicit_ac.rtlola_interpreter_test  add_two_int.rtlola_interpreter_test  add_two_int32-holes-explicit_ac.rtlola_test  add_two_int32-holes-explicit_ac.streamlab_test  add_two_int32.rtlola_test  add_two_int32.streamlab_test  add_two_int32_without_holes.rtlola_test  add_two_int32_without_holes.streamlab_test  add_two_int_without_holes.rtlola_interpreter_test  cav_trace.rtlola_test.bak  conjunct_in_ac.rtlola_interpreter_test  conjunct_in_ac.streamlab_test  count_1_4.rtlola_interpreter_test  frequencies.rtlola_interpreter_test  frequencies.streamlab_test  get_access.rtlola_test  get_access.streamlab_test  hold_access.rtlola_interpreter_test  hold_access.rtlola_test  hold_access.streamlab_test  large_offset.rtlola_test  large_offset.streamlab_test  medium_offset.rtlola_test  medium_offset.streamlab_test  min_max.rtlola_interpreter_test  pcap_input.rtlola_interpreter_test  rtlola-interpreter-e2e-tests.py  rtlola_test_runner.py  short_offset-holes.rtlola_interpreter_test  short_offset-holes.streamlab_test  simple_sliding_window.rtlola_test  simple_sliding_window.streamlab_test  streamlab-e2e-tests.py
tests/specs/: add_two_streams.lola  add_two_streams_explicit_ac.lola  conjunct_in_ac.lola  count_1_4.lola  count_packets.lola  different_frequencies.lola  get_access.lola  hold_access.lola  large_offset.lola  medium_offset.lola  min_max.lola  short_offset-holes.lola  sliding_window.lola
traces/: spec.lola  spec_offline.lola  spec_online.lola
traces/ids/: udp_packets.pcap
traces/tests/: alternating_single_int32-every0.1s.csv  count_1_4.csv  int-holes.csv  long_int32.csv  single_int-every0.1s.csv  three_int32_streams.csv  two_int32_streams_no_holes.csv  two_int_streams.csv
