[package]
name = "lola-parser"
version = "0.1.0"
authors = [
    "Malte Schledjewski <schledjewski@react.uni-saarland.de>",
    "Maximilian Schwenger <schwenger@react.uni-saarland.de>",
    "Leander Tentrup <tentrup@react.uni-saarland.de>"
]

[dependencies]
pest = "^1.0"         # parser generator
pest_derive = "^1.0"
lazy_static = "1.1.0" # lazy_static! macro