[package]
name = "ast_node"
version = "0.1.0"
authors = [
    "Malte Schledjewski <schledjewski@react.uni-saarland.de>",
    "Maximilian Schwenger <schwenger@react.uni-saarland.de>",
    "Leander Tentrup <tentrup@react.uni-saarland.de>"
]

[dependencies]
pest = "^2.0"         # parser generator
pest_derive = "^2.0"