[package]
name = "streamlab-evaluator"
version = "0.1.0"
authors = [
    "Malte Schledjewski <schledjewski@react.uni-saarland.de>",
    "Maximilian Schwenger <schwenger@react.uni-saarland.de>",
    "Marvin Stenger <stenger@react.uni-saarland.de>",
    "Leander Tentrup <tentrup@react.uni-saarland.de>"
]
edition = "2018"

[[bin]]
name = "streamlab"
path = "src/bin/streamlab.rs"

[dependencies]
streamlab-frontend = {path = "../frontend/"}
ordered-float = "1.0.2"
csv = "1.0.7"
itertools = "0.8"
clap = "2.33.0"  # command line parsing
byteorder = "1.3.2"
common = {path = "../common/"}
crossterm = "0.9.6"  # terminal output
bit-set = "0.5.1"
crossbeam-channel = "0.3"
tempfile = "3.0.8"
regex = "1.1.7"
humantime = "1.2.0"
