[package]
name = "streamlab-frontend"
version = "0.1.0"
authors = [
    "Malte Schledjewski <schledjewski@react.uni-saarland.de>",
    "Maximilian Schwenger <schwenger@react.uni-saarland.de>",
    "Marvin Stenger <stenger@react.uni-saarland.de>",
    "Leander Tentrup <tentrup@react.uni-saarland.de>"
]
edition = "2018"

[dependencies]
log = "0.4.6"  # logging macros
simplelog = "0.5.3"  # logging implementation
pest = "2.1"         # parser generator
pest_derive = "2.1"
lazy_static = "1.3.0" # lazy_static! macro
clap = "2.33.0"  # command line parsing
termcolor = "1"  # color output to terminal
petgraph = "0.4.13"
ena = "0.13.0" # union-find implementation
num = "0.2"     # infinite precision rationals
color-backtrace = "0.2.2"
uom = { version = "0.24.0", default-features = false, features = [ "autoconvert", "rational64", "si", "std", "use_serde"]}

[features]
types-only-64bit = []
types-no-aliases = []
