[package]
name = "rtlola-frontend"
version = "0.3.3"
authors = [
    "Jan Baumeister <jbaumeister@react.uni-saarland.de>",
    "Florian Kohn <s8flkohn@stud.uni-saarland.de>",
    "Stefan Oswald <s.oswald@react.uni-saarland.de>",
    "Malte Schledjewski <schledjewski@react.uni-saarland.de>",
    "Maximilian Schwenger <schwenger@react.uni-saarland.de>",
    "Marvin Stenger <stenger@react.uni-saarland.de>",
    "Leander Tentrup <tentrup@react.uni-saarland.de>",
]
edition = "2018"
description = "A parser and analyzer for RTLola specifications."
readme = "README.md"
homepage = "http://rtlola.org"
repository = "https://github.com/reactive-systems/RTLola"
license = "Apache-2.0"
keywords = ["verification", "frontend", "monitoring", "parser", "analyzer"]

[dependencies]
log = "0.4.8"  # logging macros
simplelog = "0.7.0"  # logging implementation
pest = "2.1"         # parser generator
pest_derive = "2.1"
lazy_static = "1.3.0" # lazy_static! macro
clap = "2.33.0"  # command line parsing
termcolor = "1"  # color output to terminal
petgraph = "0.5"
ena = "0.13.0" # union-find implementation
num = "0.2"     # infinite precision rationals
color-backtrace = "0.3"
uom = { version = "0.25.0", default-features = false, features = [ "autoconvert", "rational64", "si", "std", "use_serde"]}
