[package]
name = "input-analyzer"
version = "0.1.0"
authors = ["Malte Schledjewski <schledjewski@react.uni-saarland.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
pcap = "0.7" # pcap file parsing
serde_json = "^1.0.56"
serde = { version = "^1.0.114", features = ["derive"]}
lexical-core = "0.7"
chrono = "0.4"
orion = "0.15"
hex = "0.4"